Public export of Nexus code:   - ff82227e550cc7824ed03b1e1511505cbcc36b4b by Nicholas Blair <nblair@sonatype.com>
GitOrigin-RevId: ff82227e550cc7824ed03b1e1511505cbcc36b4b